build/log/idf_py_stdout_output_155782
Command: ninja all
[1/9] Building C object esp-idf/tb_client/CMakeFiles/__idf_tb_client.dir/tb_client.c.obj
FAILED: esp-idf/tb_client/CMakeFiles/__idf_tb_client.dir/tb_client.c.obj 
/home/manus/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/manus/esp/tb_project/build/config -I/home/manus/esp/tb_project/components/tb_client/include -I/home/manus/esp/esp-idf/components/newlib/platform_include -I/home/manus/esp/esp-idf/components/freertos/config/include -I/home/manus/esp/esp-idf/components/freertos/config/include/freertos -I/home/manus/esp/esp-idf/components/freertos/config/riscv/include -I/home/manus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/manus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/manus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/manus/esp/esp-idf/components/freertos/esp_additions/include -I/home/manus/esp/esp-idf/components/esp_hw_support/include -I/home/manus/esp/esp-idf/components/esp_hw_support/include/soc -I/home/manus/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/manus/esp/esp-idf/components/esp_hw_support/dma/include -I/home/manus/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/manus/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/manus/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/manus/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/manus/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/manus/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -I/home/manus/esp/esp-idf/components/esp_hw_support/port/esp32c3/include -I/home/manus/esp/esp-idf/components/heap/include -I/home/manus/esp/esp-idf/components/heap/tlsf -I/home/manus/esp/esp-idf/components/log/include -I/home/manus/esp/esp-idf/components/soc/include -I/home/manus/esp/esp-idf/components/soc/esp32c3 -I/home/manus/esp/esp-idf/components/soc/esp32c3/include -I/home/manus/esp/esp-idf/components/soc/esp32c3/register -I/home/manus/esp/esp-idf/components/hal/platform_port/include -I/home/manus/esp/esp-idf/components/hal/esp32c3/include -I/home/manus/esp/esp-idf/components/hal/include -I/home/manus/esp/esp-idf/components/esp_rom/include -I/home/manus/esp/esp-idf/components/esp_rom/esp32c3/include -I/home/manus/esp/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -I/home/manus/esp/esp-idf/components/esp_rom/esp32c3 -I/home/manus/esp/esp-idf/components/esp_common/include -I/home/manus/esp/esp-idf/components/esp_system/include -I/home/manus/esp/esp-idf/components/esp_system/port/soc -I/home/manus/esp/esp-idf/components/esp_system/port/include/riscv -I/home/manus/esp/esp-idf/components/esp_system/port/include/private -I/home/manus/esp/esp-idf/components/riscv/include -I/home/manus/esp/esp-idf/components/lwip/include -I/home/manus/esp/esp-idf/components/lwip/include/apps -I/home/manus/esp/esp-idf/components/lwip/include/apps/sntp -I/home/manus/esp/esp-idf/components/lwip/lwip/src/include -I/home/manus/esp/esp-idf/components/lwip/port/include -I/home/manus/esp/esp-idf/components/lwip/port/freertos/include -I/home/manus/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/manus/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/manus/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/manus/esp/tb_project/components/nvs_storage/include -I/home/manus/esp/esp-idf/components/nvs_flash/include -I/home/manus/esp/esp-idf/components/esp_partition/include -I/home/manus/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/manus/esp/esp-idf/components/esp_event/include -I/home/manus/esp/esp-idf/components/tcp_transport/include -I/home/manus/esp/esp-idf/components/esp-tls -I/home/manus/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/manus/esp/esp-idf/components/mbedtls/port/include -I/home/manus/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/manus/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/manus/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/manus/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/manus/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/manus/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/manus/esp/esp-idf/components/esp_timer/include -I/home/manus/esp/tb_project/managed_components/espressif__cjson/cJSON -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/manus/esp/tb_project=. -fmacro-prefix-map=/home/manus/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/tb_client/CMakeFiles/__idf_tb_client.dir/tb_client.c.obj -MF esp-idf/tb_client/CMakeFiles/__idf_tb_client.dir/tb_client.c.obj.d -o esp-idf/tb_client/CMakeFiles/__idf_tb_client.dir/tb_client.c.obj -c /home/manus/esp/tb_project/components/tb_client/tb_client.c
/home/manus/esp/tb_project/components/tb_client/tb_client.c: In function 'handle_rpc_request':
/home/manus/esp/tb_project/components/tb_client/tb_client.c:310:12: warning: unused variable 'res' [-Wunused-variable]
  310 |     cJSON *res = cJSON_CreateObject();
      |            ^~~
/home/manus/esp/tb_project/components/tb_client/tb_client.c:309:10: warning: unused variable 'rpc_handled' [-Wunused-variable]
  309 |     bool rpc_handled = false;
      |          ^~~~~~~~~~~
/home/manus/esp/tb_project/components/tb_client/tb_client.c:299:18: warning: unused variable 'params' [-Wunused-variable]
  299 |     const cJSON *params = cJSON_GetObjectItemCaseSensitive(root, "params");
      |                  ^~~~~~
/home/manus/esp/tb_project/components/tb_client/tb_client.c: In function 'tb_client_restart_task':
/home/manus/esp/tb_project/components/tb_client/tb_client.c:407:53: error: 'mqtt_cfg' undeclared (first use in this function)
  407 |         handle->mqtt_client = esp_mqtt_client_init(&mqtt_cfg);
      |                                                     ^~~~~~~~
/home/manus/esp/tb_project/components/tb_client/tb_client.c:407:53: note: each undeclared identifier is reported only once for each function it appears in
/home/manus/esp/tb_project/components/tb_client/tb_client.c:396:38: warning: unused variable 'cfg' [-Wunused-variable]
  396 |             esp_mqtt_client_config_t cfg = {
      |                                      ^~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/manus/esp/tb_project/build/bootloader/esp-idf/esptool_py && /home/manus/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/manus/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/manus/esp/tb_project/build/bootloader/bootloader.bin
Bootloader binary size 0x5210 bytes. 0x2df0 bytes (36%) free.
ninja: build stopped: subcommand failed.
